conclude HTML content

--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 <body>
     <!--Rules Sketch-->
     <img src="assets/images/Rock Paper Scissors rules.png" alt="image sketch of game rules">
+<!-- display of player choices and results-->
+    <div class="container">
+        <h1>Player X Selection:  <span class="playerXselection"></span></h1>
+        <h1>Player Y Selection:  <span class="playerYselection"></span></h1>
+        <h3>Result:  <span id="result"></span></h3>
 
+<!-- Buttons for player selection-->
+        <button class="rock">Rock</button>
+        <button class="scissors">Scissors</button>
+        <button class="paper">Paper</button>
+    </div>
 
 
 
