conclude javascript basic setups and initiate README file

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 <body>
     <!--Rules Sketch-->
     <div class="image">
-        <img src="assets/images/Rock Paper Scissors rules.jpg" alt="image sketch of game rules">
+        <img src="assets/images/rockpaperscissorsrules.jpg" alt="image sketch of game rules">
     </div>
 
 <!-- display of player choices and results-->
     <div class="container">
-        <h1 id="player-x">Player X Selection:  <span class="playerXselection"></span></h1>
-        <h1 id="player-y">Player Y Selection:  <span class="playerYselection"></span></h1>
-        <h1 id="result">Result:  <span class="result"></span></h1>
+        <h1>Your Selection: <span id="player-selection"></span></h1>
+        <h1>Computer Selection: <span id="computer-selection"></span></h1>
+        <h1>Result:  <span id="result"></span></h1>
     </div>
 <!-- Buttons for player selection-->
-        <button class="rock">Rock</button>
-        <button class="scissors">Scissors</button>
-        <button class="paper">Paper</button>
+        <button id="Rock">Rock</button>
+        <button id="Scissors">Scissors</button>
+        <button id="Paper">Paper</button>
     
 
-    <!--link to Javascript sheet-->
+    <!--link to Javascript sheet at the botton so its the last item to load on the brwoser-->
     <script src="assets/js/script.js"></script>
 </body>
 </html>
