--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
     <div class="image">
         <img src="assets/images/rockpaperscissorsrules.jpg" alt="image sketch of game rules">
     </div>
+    <div class="rules">
+        <p>
+            Rules:
+            <br>
+            The rules of the game are simple:
+            <br>
+            Rock beats Scissors - Scissors beats Paper - Paper beats Rock
+            <br>
+            Make your selection against the Computer and see if you win.
+            <br>
+            Good Luck and enjoy the game.
+        </p>
+    </div>
+
+    <br>
 
 <!-- display of player choices and results-->
     <div class="container">
@@ -23,9 +38,9 @@
         <h1>Result:  <span id="result"></span></h1>
     </div>
 <!-- Buttons for player selection-->
-        <button id="Rock">Rock</button>
-        <button id="Scissors">Scissors</button>
-        <button id="Paper">Paper</button>
+        <button id="Rock"><img src="assets/images/rock.jpg" alt="image of rock"></button>
+        <button id="Scissors"><img src="assets/images/scissors.jpg" alt="image of scissors"></button>
+        <button id="Paper"><img src="assets/images/paper.jpg" alt="image of paper"></button>
     
 
     <!--link to Javascript sheet at the botton so its the last item to load on the brwoser-->
