changes to HTML comments and CSS styling of buttons adjusted git add . git commit -m changes to HTML comments and CSS styling of buttons adjusted

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
-    <!--Rules Sketch-->
+    <!--Rules Image-->
     <div class="image">
         <img src="assets/images/rockpaperscissorsrules.jpg" alt="image sketch of game rules">
     </div>
+    <!--Rules Text-->
     <div class="rules">
         <p>
             Rules:
@@ -37,13 +38,14 @@
         <h1>Computer Selection: <span id="computer-selection"></span></h1>
         <h1>Result:  <span id="result"></span></h1>
     </div>
+    
 <!-- Buttons for player selection-->
-        <button id="Rock"><img src="assets/images/rock.jpg" alt="image of rock"></button>
-        <button id="Scissors"><img src="assets/images/scissors.jpg" alt="image of scissors"></button>
-        <button id="Paper"><img src="assets/images/paper.jpg" alt="image of paper"></button>
+        <button id="Rock"></button>
+        <button id="Scissors"></button>
+        <button id="Paper"></button>
     
 
-    <!--link to Javascript sheet at the botton so its the last item to load on the brwoser-->
+<!--link to Javascript sheet at the botton so its the last item to load on the brwoser-->
     <script src="assets/js/script.js"></script>
 </body>
 </html>
