add images to HTML to replace button tags

--- a/index.html
+++ b/index.html
@@ -39,12 +39,16 @@
         <h1>Result:  <span id="result"></span></h1>
     
     
-<!-- Buttons for player selection-->
+        <input type="image" src="assets/images/rock.jpg" name="Rock" width="100" height="100" alt="button to select Rock">
+        <input type="image" src="assets/images/scissors.jpg" name="Scissors" width="100" height="100" alt="button to select Scissors">
+        <input type="image" src="assets/images/paper.jpg" name="Paper" width="100" height="100" alt="button to select Paper">
+
+<!-- Buttons for player selection
         <button id="Rock"></button>
         <button id="Scissors"></button>
         <button id="Paper"></button>
     </div>
-
+-->
 <!--link to Javascript sheet at the botton so its the last item to load on the brwoser-->
     <script src="assets/js/script.js"></script>
 </body>
