--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         <input type="image" src="assets/images/scissors.jpg" name="Scissors" width="100" height="100" alt="button to select Scissors">
         <input type="image" src="assets/images/paper.jpg" name="Paper" width="100" height="100" alt="button to select Paper">
 
-<!-- Buttons for player selection
-        <button id="Rock"></button>
-        <button id="Scissors"></button>
-        <button id="Paper"></button>
+    <div class="scoreboard">
+        <div class="pscore">Player Score:  </div>
+        <div class="cscore">Computer Score:  </div>
     </div>
--->
+    </div>
+
 <!--link to Javascript sheet at the botton so its the last item to load on the brwoser-->
     <script src="assets/js/script.js"></script>
 </body>
