--- a/index.html
+++ b/index.html
@@ -38,14 +38,19 @@
         <h1>Computer Selection: <span id="computer-selection"></span></h1>
         <h1>Result:  <span id="result"></span></h1>
     
+    <div>
+        <input class="rock" type="image" src="assets/images/rock.jpg" name="Rock" width="100" height="100" alt="button to select Rock">
+        <input class="scissors" type="image" src="assets/images/scissors.jpg" name="Scissors" width="100" height="100" alt="button to select Scissors">
+        <input class="paper" type="image" src="assets/images/paper.jpg" name="Paper" width="100" height="100" alt="button to select Paper">
+    </div>
     
-        <input type="image" src="assets/images/rock.jpg" name="Rock" width="100" height="100" alt="button to select Rock">
-        <input type="image" src="assets/images/scissors.jpg" name="Scissors" width="100" height="100" alt="button to select Scissors">
-        <input type="image" src="assets/images/paper.jpg" name="Paper" width="100" height="100" alt="button to select Paper">
-
-    <div class="scoreboard">
-        <div class="pscore">Player Score:  </div>
-        <div class="cscore">Computer Score:  </div>
+    <div id="scoreboard">
+        <div id="pscore">Player Score: 
+            <span class="result">0</span>
+        </div>
+        <div id="cscore">Computer Score:  
+            <span class="result">0</span>
+        </div>
     </div>
     </div>
 
