add js code for score tracking and incrementing score results

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <!-- display of player choices and results-->
     <div class="container">
-        <h1>Your Selection: <span id="player-selection"></span></h1>
+        <h1>Player Selection: <span id="player-selection"></span></h1>
         <h1>Computer Selection: <span id="computer-selection"></span></h1>
         <h1>Result:  <span id="result"></span></h1>
     
@@ -45,11 +45,14 @@
     </div>
     
     <div id="scoreboard">
-        <div id="pscore">Player Score: 
-            <span class="result">0</span>
+        <div>Player Score: 
+            <span id="pScore" class="score">0</span>
         </div>
-        <div id="cscore">Computer Score:  
-            <span class="result">0</span>
+        <div>Computer Score:  
+            <span id="cScore" class="score">0</span>
+        </div>
+        <div>Draw:  
+            <span id="dScore" class="score">0</span>
         </div>
     </div>
     </div>
