add a page refresh button to start game from scratch

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <!--Rules Text-->
     <div class="rules">
         <p>
-            <span>Rules:</span>
-            <br>
+            
             The rules of the game are simple:
             <br>
             Rock beats Scissors - Scissors beats Paper - Paper beats Rock
@@ -55,6 +54,9 @@
             <span id="dScore" class="score">0</span>
         </div>
     </div>
+
+    <button onclick="location.reload();">Start Again!</button>
+
     </div>
 
 <!--link to Javascript sheet at the botton so its the last item to load on the brwoser-->
