add rules page in html with link to games page

--- a/index.html
+++ b/index.html
@@ -11,25 +11,10 @@
 </head>
 
 <body>
-    <!--Rules Image-->
-    <div class="image">
-        <img src="assets/images/rockpaperscissorsrules.jpg" alt="image sketch of game rules">
-    </div>
-    <!--Rules Text-->
-    <div class="rules">
-        <p>
-            
-            The rules of the game are simple:
-            <br>
-            Rock beats Scissors - Scissors beats Paper - Paper beats Rock
-            <br>
-            Make your selection against the Computer and see if you win.
-            <br>
-            Good Luck and enjoy the game.
-        </p>
-    </div>
 
-    <br>
+    <div> 
+        <a href="homepage.html">Back to Main Page</a>
+    </div>
 
 <!-- display of player choices and results-->
     <div class="container">
