add main page button styling in CSS

--- a/homepage.html
+++ b/homepage.html
@@ -10,26 +10,39 @@
 
     <title>Document</title>
 </head>
-<body>
-    <!--Rules Image-->
-    <div class="image">
-        <img src="assets/images/rockpaperscissorsrules.jpg" alt="image sketch of game rules">
-    </div>
-
+<body id="mainpage">
 
     <!--Rules Text-->
-    <p>
-        The rules of the game are simple:
+    
+        <h1>The rules of the game are simple: </h1>
         <br>
+        <h3>Make your selection between Rock, Scissors and Paper to see if you can beat the computer.</h3>
+        <br>
+    <div class="rules">
+        <div class="rule">
+            <img src="assets/images/rock.jpg" alt="Image of Rock">
+            <div class="text"> beats </div>
+            <img src="assets/images/scissors.jpg" alt="Image of Scissors">
+        </div>
+        <br>
+        <div class="rule">
+            <img src="assets/images/scissors.jpg" alt="Image of Scissors">
+            <div class="text"> beats </div>
+            <img src="assets/images/paper.jpg" alt="Image of Paper">
+        </div>
+        <br>
+        <div class="rule">
+            <img src="assets/images/paper.jpg" alt="Image of Paper">
+            <div class="text"> beats </div>
+            <img src="assets/images/rock.jpg" alt="Image of Rock">
+        </div>
+        <br>
+    </div>
 
-        <img src="assets/images/rock.jpg" alt="Image of Rock"> beats <img src="assets/images/scissors.jpg" alt="Image of Scissors">
-        <br>
-        <img src="assets/images/scissors.jpg" alt="Image of Scissors"> beats <img src="assets/images/paper.jpg" alt="Image of Paper">
-        <br>
-        <img src="assets/images/paper.jpg" alt="Image of Paper"> beats <img src="assets/images/rock.jpg" alt="Image of Rock">
-        <br>
-    <div> 
-        <a href="index.html">Start Playing</a>
+    
+
+    <div class="btn"> 
+        <button class="startplay"><a href="index.html">Start Playing</a></button>
     </div>
 </body>
 </html>
