--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div> 
-        <a href="homepage.html">Back to Main Page</a>
+        <button><a href="homepage.html">Back to Main Page</a></button>
     </div>
 
 <!-- display of player choices and results-->
