adjust butons styling and finalise indexpage responsiveness

--- a/homepage.html
+++ b/homepage.html
@@ -10,19 +10,14 @@
 
     <title>Document</title>
 </head>
-<body id="mainpage">
+<body>
 
     <!--Rules Text-->
     
-        <h1>The rules of the game are simple: </h1>
+    <h1>The rules of the game are simple: </h1>
         <br>
-        <h3>Make your selection between Rock, Scissors and Paper to see if you can beat the computer.</h3>
+    <h3>Make your selection between Rock, Scissors and Paper and see if you can beat the computer.</h3>
         <br>
-
-        <div class="btn"> 
-            <button class="startplay"><a href="index.html">Start Playing</a></button>
-        </div>
-
 
     <div class="rules">
         <div class="rule">
@@ -30,19 +25,27 @@
             <div class="text"> beats </div>
             <img src="assets/images/scissors.jpg" alt="Image of Scissors">
         </div>
+
         <br>
+
         <div class="rule">
             <img src="assets/images/scissors.jpg" alt="Image of Scissors">
             <div class="text"> beats </div>
             <img src="assets/images/paper.jpg" alt="Image of Paper">
         </div>
+
         <br>
+
         <div class="rule">
             <img src="assets/images/paper.jpg" alt="Image of Paper">
             <div class="text"> beats </div>
             <img src="assets/images/rock.jpg" alt="Image of Rock">
         </div>
         <br>
+    </div>
+
+    <div class="btn"> 
+        <button class="startplay"><a href="index.html">Start Playing</a></button>
     </div>
     
 </body>
