adjust h1 and h3 setting for improved UX

--- a/homepage.html
+++ b/homepage.html
@@ -14,9 +14,9 @@
 
     <!--Rules Text-->
     
-    <h1>The rules of the game are simple: </h1>
+    <h1 class="gamerules">Game Rules: </h1>
         <br>
-    <h3>Make your selection between Rock, Scissors and Paper and see if you can beat the computer.</h3>
+    <h3 class="rulestext">Make your selection between Rock, Scissors and Paper and see if you can beat the computer.</h3>
         <br>
 
     <div class="rules">
