add text to rules and JS code to terminate game once any score reaches 5 points

--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
     
     <h1 class="gamerules">Game Rules: </h1>
         <br>
-    <h3 class="rulestext">Make your selection between Rock, Scissors and Paper and see if you can beat the computer.</h3>
+    <h3 class="rulestext">Make your selection between "Rock", "Scissors" and "Paper" and see if you can beat the computer. The first to 5 wins! Press new game to start again.</h3>
         <br>
 
     <div class="rules">
