--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="btn">
-        <button class="startagain" onclick="location.reload();">New Game?</button>
+        <button class="startagain" onclick="location.reload();">New Game</button>
     </div>
 
     <div class="btn"> 
