--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
     
     <h1 class="gamerules">Game Rules: </h1>
         <br>
-    <h3 class="rulestext">Make your selection between "Rock", "Scissors" and "Paper" and see if you can beat the computer. The first to 5 wins! Press new game to start again.</h3>
+    <h3 class="rulestext">Make your selection between "Rock", "Scissors" and "Paper" and see if you can beat the computer. The first to 5 wins! Press Start below to begin.</h3>
         <br>
 
     <div class="rules">
@@ -45,7 +45,7 @@
     </div>
 
     <div class="btn"> 
-        <button class="startplay"><a href="index.html">Start Playing</a></button>
+        <button class="startplay"><a href="index.html">Start</a></button>
     </div>
     
 </body>
