rename html files to resolve loading issues

--- a/index.html
+++ b/index.html
@@ -4,47 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!--link to CSS stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Rock / Scissors / Paper</title>
+    <title>Document</title>
 </head>
-
 <body>
-<!-- display of player choices and results-->
-    <div class="container">
-        <h1 class="playersText">Player Selection: <span id="player-selection"></span></h1>
-        <h1 class="playersText">Computer Selection: <span id="computer-selection"></span></h1>
-        <h1 class="playersText">Result:  <span id="result"></span></h1>
-    </div>
 
-    <div class="selectionimgs">
-        <input class="rock" type="image" src="assets/images/rock.jpg" name="Rock" width="100" height="100" alt="button to select Rock">
-        <input class="scissors" type="image" src="assets/images/scissors.jpg" name="Scissors" width="100" height="100" alt="button to select Scissors">
-        <input class="paper" type="image" src="assets/images/paper.jpg" name="Paper" width="100" height="100" alt="button to select Paper">
-    </div>
+    <!--Rules Text-->
     
-    <div id="scoreboard">
-        <div class="playerdisplay">Player: 
-            <span id="pScore" class="score">0</span>
-        </div>
-        <div class="playerdisplay">Computer:  
-            <span id="cScore" class="score">0</span>
-        </div>
-        <div class="playerdisplay">Draw:  
-            <span id="dScore" class="score">0</span>
-        </div>
-    </div>
+    <h1 class="gamerules">Game Rules: </h1>
+        <br>
+    <h3 class="rulestext">Make your selection between "Rock", "Scissors" and "Paper" and see if you can beat the computer. The first to 5 wins! Press Start below to begin.</h3>
+        <br>
 
-    <div class="btn">
-        <button class="startagain" onclick="location.reload();">New Game</button>
+    <div class="rules">
+        <div class="rule">
+            <img src="assets/images/rock.jpg" alt="Image of Rock">
+            <div class="text"> beats </div>
+            <img src="assets/images/scissors.jpg" alt="Image of Scissors">
+        </div>
+
+        <br>
+
+        <div class="rule">
+            <img src="assets/images/scissors.jpg" alt="Image of Scissors">
+            <div class="text"> beats </div>
+            <img src="assets/images/paper.jpg" alt="Image of Paper">
+        </div>
+
+        <br>
+
+        <div class="rule">
+            <img src="assets/images/paper.jpg" alt="Image of Paper">
+            <div class="text"> beats </div>
+            <img src="assets/images/rock.jpg" alt="Image of Rock">
+        </div>
+        <br>
     </div>
 
     <div class="btn"> 
-        <button class="rtnhpage"><a href="homepage.html">Back to Main Page</a></button>
+        <button class="startplay"><a href="index.html">Start</a></button>
     </div>
-
-<!--link to Javascript sheet at the botton so its the last item to load on the brwoser-->
-    <script src="assets/js/script.js"></script>
+    
 </body>
 </html>
