add commented out comments in each HTML section

--- a/gamepage.html
+++ b/gamepage.html
@@ -17,13 +17,13 @@
         <h1 class="playersText">Computer Selection: <span id="computer-selection"></span></h1>
         <h1 class="playersText">Result:  <span id="result"></span></h1>
     </div>
-
+<!-- image buttons -->
     <div class="selectionimgs">
         <input class="rock" type="image" src="assets/images/rock.jpg" name="Rock" width="100" height="100" alt="button to select Rock">
         <input class="scissors" type="image" src="assets/images/scissors.jpg" name="Scissors" width="100" height="100" alt="button to select Scissors">
         <input class="paper" type="image" src="assets/images/paper.jpg" name="Paper" width="100" height="100" alt="button to select Paper">
     </div>
-    
+<!-- scoreboard display -->
     <div id="scoreboard">
         <div class="playerdisplay">Player: 
             <span id="pScore" class="score">0</span>
@@ -35,7 +35,7 @@
             <span id="dScore" class="score">0</span>
         </div>
     </div>
-
+<!-- buttons -->
     <div class="btn">
         <button class="startagain" onclick="location.reload();">New Game</button>
     </div>
