--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <br>
     <h3 class="rulestext">Make your selection between "Rock", "Scissors" and "Paper" and see if you can beat the computer. The first to 5 wins! Press Start below to begin.</h3>
         <br>
-
+    <!--Rules illustrations-->
     <div class="rules">
         <div class="rule">
             <img src="assets/images/rock.jpg" alt="Image of Rock">
@@ -43,7 +43,7 @@
         </div>
         <br>
     </div>
-
+    <!-- button to start game -->
     <div class="btn"> 
         <button class="startplay"><a href="index.html">Start</a></button>
     </div>
