fix htmlpages links on each html

--- a/gamepage.html
+++ b/gamepage.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="btn"> 
-        <button class="rtnhpage"><a href="homepage.html">Back to Main Page</a></button>
+        <button class="rtnhpage"><a href="index.html">Back to Main Page</a></button>
     </div>
 
 <!--link to Javascript sheet at the botton so its the last item to load on the brwoser-->
