--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <!-- button to start game -->
     <div class="btn"> 
-        <button class="startplay"><a href="index.html">Start</a></button>
+        <button class="startplay"><a href="gamepage.html">Start</a></button>
     </div>
     
 </body>
