--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="gamepage.html">Start</a>
     </div>
     
-    <h3 class="rulestext1">Check out the World Rock Paper Scissors Association site for the full version of the rules <a href="https://wrpsa.com/" target="blank" aria-label="Full rules for the game by the World Rock Paper Scissors Association">Click Here!</a></h3>
+    <h3 class="rulestext1">Check out the World Rock Paper Scissors Association site for full version of the rules <a href="https://wrpsa.com/" target="blank" aria-label="Full rules for the game by the World Rock Paper Scissors Association">Click Here!</a></h3>
         <br>
 </body>
 </html>
