play with design of the game to improve UX and UI

--- a/gamepage.html
+++ b/gamepage.html
@@ -19,9 +19,9 @@
     </div>
 <!-- image buttons -->
     <div class="selectionimgs">
-        <input class="rock" type="image" src="assets/images/rock.jpg" name="Rock" width="100" height="100" alt="button to select Rock">
-        <input class="scissors" type="image" src="assets/images/scissors.jpg" name="Scissors" width="100" height="100" alt="button to select Scissors">
-        <input class="paper" type="image" src="assets/images/paper.jpg" name="Paper" width="100" height="100" alt="button to select Paper">
+        <input class="rock" type="image" src="assets/images/rockup.jpg" name="Rock" width="100" height="100" alt="button to select Rock">
+        <input class="scissors" type="image" src="assets/images/scissorsup.jpg" name="Scissors" width="100" height="100" alt="button to select Scissors">
+        <input class="paper" type="image" src="assets/images/paperup.jpg" name="Paper" width="100" height="100" alt="button to select Paper">
     </div>
 <!-- scoreboard display -->
     <div id="scoreboard">
