--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
     <!--Rules illustrations-->
     <div class="rules">
         <div class="rule">
-            <img src="assets/images/rock.jpg" alt="Image of Rock">
+            <img src="assets/images/rockleft.jpg" alt="Image of Rock">
             <div class="text"> beats </div>
-            <img src="assets/images/scissors.jpg" alt="Image of Scissors">
+            <img src="assets/images/scissorsright.jpg" alt="Image of Scissors">
         </div>
 
         <br>
 
         <div class="rule">
-            <img src="assets/images/scissors.jpg" alt="Image of Scissors">
+            <img src="assets/images/scissorsleft.jpg" alt="Image of Scissors">
             <div class="text"> beats </div>
-            <img src="assets/images/paper.jpg" alt="Image of Paper">
+            <img src="assets/images/paperright.jpg" alt="Image of Paper">
         </div>
 
         <br>
 
         <div class="rule">
-            <img src="assets/images/paper.jpg" alt="Image of Paper">
+            <img src="assets/images/paperleft.jpg" alt="Image of Paper">
             <div class="text"> beats </div>
-            <img src="assets/images/rock.jpg" alt="Image of Rock">
+            <img src="assets/images/rockright.jpg" alt="Image of Rock">
         </div>
         
     </div>
