add feedback button on game page to open up feedback on a new html page

--- a/gamepage.html
+++ b/gamepage.html
@@ -44,6 +44,12 @@
         <button class="rtnhpage"><a href="index.html">Back to Main Page</a></button>
     </div>
 
+    <div class="btn"> 
+        <button class="feedbackpage"><a href="feedback.html">Feedback / Comments</a></button>
+    </div>
+
+    </Section>
+
 <!--link to Javascript sheet at the botton so its the last item to load on the brwoser-->
     <script src="assets/js/script.js"></script>
 </body>
