further CSS styling on feedback page and media query settings

--- a/feedback.html
+++ b/feedback.html
@@ -28,6 +28,10 @@
             
             <input class="clear-button" type="reset" value="Clear">
         </form>
+
+        <div class="btn"> 
+            <button class="rtnhpage"><a href="index.html">Back to Home Page</a></button>
+        </div>
     <!--link to Javascript sheet at the botton so its the last item to load on the brwoser-->
     <script src="assets/js/script.js"></script>
 </body>
