--- a/gamepage.html
+++ b/gamepage.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="btn"> 
-        <button class="rtnhpage"><a href="index.html">Back to Main Page</a></button>
+        <button class="rtnhpage"><a href="index.html">Back to Home Page</a></button>
     </div>
 
     <div class="btn"> 
