add modal pop ups to replace alerts

--- a/gamepage.html
+++ b/gamepage.html
@@ -44,6 +44,16 @@
         <button class="rtnhpage"><a href="index.html">Back to Home Page</a></button>
     </div>
 
+    <button id="open">click me please</button>
+    <div class="modal-box" id="modal_box">
+        <div clas="modal">
+            <h1>Well Done</h1>
+            <p>Back to home page or try a new game?</p>
+            <button id="hpage">Home Page</button>
+            <button id="newgame">New Game</button>
+        </div>
+    </div>
+
 <!--link to Javascript sheet at the botton so its the last item to load on the brwoser-->
     <script src="assets/js/script.js"></script>
 </body>
