add JS code for modal box pop ups

--- a/gamepage.html
+++ b/gamepage.html
@@ -44,13 +44,13 @@
         <button class="rtnhpage"><a href="index.html">Back to Home Page</a></button>
     </div>
 
-    <button id="open">click me please</button>
+  
     <div class="modal-box" id="modal_box">
-        <div clas="modal">
+        <div class="modal">
             <h1>Well Done</h1>
             <p>Back to home page or try a new game?</p>
-            <button id="hpage">Home Page</button>
-            <button id="newgame">New Game</button>
+            <button id="hpage"><a href="index.html">Back to Home Page</a></button>
+            <button id="newgame" onclick="location.reload();">New Game</button>
         </div>
     </div>
 
