reposition modal box for mobile phones and iPads

--- a/gamepage.html
+++ b/gamepage.html
@@ -47,10 +47,14 @@
   
     <div class="modal-box" id="modal_box">
         <div class="modal">
-            <h1>Well Done</h1>
-            <p>Back to home page or try a new game?</p>
-            <button id="hpage"><a href="index.html">Back to Home Page</a></button>
-            <button id="newgame" onclick="location.reload();">New Game</button>
+            <h1>Are You Enjoying The Game?</h1>
+            <p>Back to home page or continue playing?</p>
+            <div class="popupbtn1">
+                <button id="hpage"><a href="index.html">Back to Home Page</a></button>
+            </div>
+            <div class="popupbtn2">
+                <button id="newgame" onclick="location.reload();">Continue Playing</button>
+            </div>
         </div>
     </div>
 
