add validator test results to readme file and amend any errors

--- a/gamepage.html
+++ b/gamepage.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="btn"> 
-        <button class="rtnhpage"><a href="index.html">Back to Home Page</a></button>
+        <a href="index.html" class="rtnhpage">Back to Home Page</a>
     </div>
 
   
@@ -50,7 +50,7 @@
             <h1>Are You Enjoying The Game?</h1>
             <p>Back to home page or continue playing?</p>
             <div class="popupbtn1">
-                <button id="hpage"><a href="index.html">Back to Home Page</a></button>
+                <a href="index.html" id="hpage">Back to Home Page</a>
             </div>
             <div class="popupbtn2">
                 <button id="newgame" onclick="location.reload();">Continue Playing</button>
