add further adjustments to modal box buttons

--- a/gamepage.html
+++ b/gamepage.html
@@ -44,10 +44,10 @@
         <a href="index.html" class="rtnhpage">Back to Home Page</a>
     </div>
 
-  
+<!-- modal box --> 
     <div class="modal-box" id="modal_box">
         <div class="modal">
-            <h1 id="h1">Are You Enjoying The Game?</h1>
+            <h1 id="h1"></h1>
             <p>Back to home page or continue playing?</p>
 
         <div id="end-game-option">
@@ -55,16 +55,16 @@
                 <a href="index.html" id="hpage">Back to Home Page</a>
             </div>
             <div class="popupbtn2">
-                <button id="newgame" onclick="location.reload();">Continue Playing</button>
+                <a href="#" id="staypage" onclick="location.reload();">Continue Playing</a>
             </div>
         </div>
         
         <div id="start-game-option">
             <div class="popupbtn1">
-                <button id="start-game-no">No</button>
+                <button id="start-game-no">Continue</button>
             </div>
             <div class="popupbtn2">
-                <button id="start-game-yes" onclick="location.reload();">Yes</button>
+                <button id="start-game-yes" onclick="location.reload();">Restart</button>
             </div>
         </div>
         </div>
