--- a/gamepage.html
+++ b/gamepage.html
@@ -60,7 +60,7 @@
         
         <div id="start-game-option">
             <div class="popupbtn1">
-                <button id="start-game-no">Continue</button>
+                <button id="start-game-no">No</button>
             </div>
             <div class="popupbtn2">
                 <button id="start-game-yes" onclick="location.reload();">Restart</button>
@@ -72,7 +72,7 @@
                 <button id="return-home-no">No</button>
             </div>
             <div class="popupbtn2">
-                <a href="index.html" id="hpage">Yes</a>
+                <a href="index.html" class="hpage" id="hpage">Yes</a>
             </div>
         </div>
 
